--- a/Carpeta/index.html
+++ b/Carpeta/index.html
@@ -10,6 +10,9 @@
 <body>
     <div id="container"></div>
 
+    <!-- Botón para alternar órbitas -->
+    <button id="toggle-orbits" style="position: fixed; top: 10px; right: 10px; z-index: 10; background-color: rgba(0, 0, 0, 0.5); color: white; border: none; padding: 10px 20px; border-radius: 5px;">Toggle Orbits</button>
+
     <!-- Cargar Three.js y OrbitControls -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
@@ -17,3 +20,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
